clang/test/utils/update-verify-tests/Inputs/non-default-prefix.c
void foo() {
    a = 2; // check-error{{asdf}}
           // expected-error@-1{ignored}}
}

